unpackaged/main/default/objects/Ecosystem_Relationship__c/Ecosystem_Relationship__c.object-meta.xml
<CustomObject>
    <label>Ecosystem Relationship</label>
    <nameField>
        <displayFormat>ER-{000000}</displayFormat>
        <label>Ecosystem Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ecosystem Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>