unpackaged/main/default/objects/Ecosystem_Relationship__c/fields/Account_Partner_Link__c.field-meta.xml
<CustomField>
    <fullName>Account_Partner_Link__c</fullName>
    <label>Account Partner Link</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>