unpackaged/main/default/objects/Ecosystem_Relationship__c/fields/Contract_End_date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_date__c</fullName>
    <label>Contract End date</label>
    <type>Date</type>
</CustomField>