unpackaged/main/default/objects/Ecosystem_Relationship__c/fields/Main_Account__c.field-meta.xml
<CustomField>
    <fullName>Main_Account__c</fullName>
    <label>Main Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ecosystem Relationships</relationshipLabel>
    <relationshipName>Ecosystem_Relationships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>