unpackaged/main/default/objects/Ecosystem_Relationship__c/fields/Partner_Role__c.field-meta.xml
<CustomField>
    <fullName>Partner_Role__c</fullName>
    <label>Partner Role</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Active__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Partnership</valueSetName>
    </valueSet>
</CustomField>