unpackaged/main/default/objects/Ecosystem_Relationship__c/fields/SBT__c.field-meta.xml
<CustomField>
    <fullName>SBT__c</fullName>
    <inlineHelpText>Self Booking Tool</inlineHelpText>
    <label>SBT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CONCUR</fullName>
            </value>
            <value>
                <fullName>Cytric</fullName>
            </value>
            <value>
                <fullName>Egencia</fullName>
            </value>
            <value>
                <fullName>GETHERE</fullName>
            </value>
            <value>
                <fullName>Goelett</fullName>
            </value>
            <value>
                <fullName>KDS Neo</fullName>
            </value>
            <value>
                <fullName>Navan</fullName>
            </value>
            <value>
                <fullName>Notilus Booking Tool</fullName>
            </value>
            <value>
                <fullName>Supertripper</fullName>
            </value>
            <value>
                <fullName>TRAVELDOO</fullName>
            </value>
            <value>
                <fullName>TravelPerk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>